--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,14 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.9.1</version>
         </dependency>
+
+        <!--used for serializaiton/deserialization-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.13.0</version>
+            <version>2.13.4.1</version>
         </dependency>
+
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
@@ -49,8 +52,84 @@
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>2.6.0</version>
+            <version>2.9.0</version>
         </dependency>
     </dependencies>
+
+    <!--used for profile selection vai jenkins job-->
+    <profiles>
+        <profile>
+            <id>stage</id>
+            <properties>
+                <environment>stage</environment>
+            </properties>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/test/resources/stage</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <environment>dev</environment>
+            </properties>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/test/resources/dev</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+        <profile>
+            <id>production</id>
+            <properties>
+                <environment>production</environment>
+            </properties>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/test/resources/production</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+    </profiles>
+
+    <build>
+        <plugins>
+            <!-- to run project on jenkins-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <!-- Add any specific configuration here -->
+                    <!-- For example, to include/exclude specific tests: -->
+                    <!--
+                    <includes>
+                        <include>**/YourTestPattern*.java</include>
+                    </includes>
+                    <excludes>
+                        <exclude>**/ExcludedTestPattern*.java</exclude>
+                    </excludes>
+                    -->
+                    <!-- To set system properties or other configurations -->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>test.xml</suiteXmlFile>
+                        </suiteXmlFiles>
+                    <systemPropertyVariables>
+                        <!--suppress UnresolvedMavenProperty -->
+                        <env>${environment}</env>
+                    </systemPropertyVariables>
+
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
